# yaml-cpp-sample

./: CMakeLists.txt
src/: data_emit.cpp  data_read.cpp
